<resources>
    <string name="app_name">TemanHijrah</string>
    <string name="teman_hijrah">Teman Hijrah</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="app_logo">app logo</string>
    <string name="caligraphy">calligraphy</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="date_pick">dd-mm-yy</string>
    <string name="password">Kata Sandi</string>
    <string name="confirm_password">Ulang Kata Sandi</string>
    <string name="terms_and_condition"><u>Setujui ketentuan layanan dan kebijakan privasi</u></string>
    <string name="salam">Assalamu\'alaykum</string>
    <string name="description">A wonderful serenity has taken possession of my entire soul, like these sweet mornings</string>
    <string name="ingat_saya">Ingat saya</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="alhamdulillah">Alhamdulillah</string>
    <string name="register_description">Akun anda telah berhasil dibuat, silahkan lakukan login dan semoga menjadi lebih istiqomah</string>
    <string name="lupa">Lupa Password</string>
    <string name="lupa_description">Silahkan masukkan email\nanda yang telah terdaftar</string>
    <string name="kirim">Kirim</string>
    <string name="email_terkirim">Email terkirim</string>
    <string name="forgot_complete_description">Silahkan cek email anda untuk melakukan konfirmasi reset password</string>
    <string name="kembali_ke_login">Kembali ke login</string>
    <string name="akun">Akun</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="ubah_password">Ubah Kata Sandi</string>
    <string name="kata_sandi_lama">Kata sandi lama</string>
    <string name="kata_sandi_baru">Kata sandi baru</string>
    <string name="ulangi_kata_sandi_baru">Ulangi kata sandi baru</string>
    <string name="ganti_kata_sandi">Ganti Kata Sandi</string>
    <string name="deskripsi">Aplikasi muslim dengan banyak fitur sebagai pendamping dan fasilitas untuk membantu dalam proses hijrah, aplikasi muslim yang juga menghubungkan teman-teman hijrah dengan Al-qur\'an</string>
    <string name="ulasan_balik">Ulasan balik</string>
    <string name="tentang_kami">Tentang kami</string>
    <string name="bagikan">Bagikan</string>
    <string name="instagram">Follow us on Instagram</string>
    <string name="facebook">Like us on Facebook</string>
    <string name="logout">Logout</string>
    <string name="home">home</string>
    <string name="quran">quran</string>
    <string name="doa">doa</string>
    <string name="hafalan">Hafalan</string>
    <string name="favorite">favorite</string>
    <string name="title_activity_beranda">Assalamu alaykum</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="progress">Progress</string>
    <string name="dzikir">Dzikir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total">Total : </string>
    <string name="putaran">Putaran : </string>
    <string name="kiblat">Kiblat</string>
    <string name="subuh">Subuh</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="maghrib">Maghrib</string>
    <string name="imsak">Imsak</string>
    <string name="surah">Surah</string>
    <string name="username">username</string>
    <string name="requiredfield">Bagian ini harus diisi</string>
    <string name="password_tidak_sama">Password tidak sama</string>
    <string name="empty_field_message">Lengkapi seluruh form</string>
    <string name="pengaturan">Pengaturan</string>

    <string-array name="dzikir_array">
        <item>Tasbih</item>
        <item>Hamdalah</item>
        <item>Takbir</item>
        <item>Tahlil</item>
    </string-array>

    <string name="lafal_tasbih">سبحان الله</string>
    <string name="lafal_hamdalah">ٱلحمد لله</string>
    <string name="lafal_takbir">الله أكبر</string>
    <string name="lafal_tahlil">لا اله الاّ الله</string>

    <string name="arti_tasbih">\"Maha Suci Allah\"</string>
    <string name="arti_hamdalah">\"Segala Puji Bagi Allah\"</string>
    <string name="arti_takbir">\"Allah Maha Besar\"</string>
    <string name="arti_tahlil">\"Tiada Tuhan Selain Allah\"</string>

    <string name="arrow_point">arrow_point</string>
    <string name="compass">compass</string>
    <string name="menjelang_waktu_shalat">Menjelang Waktu Shalat</string>
    <string name="jam">\ jam \ </string>
    <string name="menit_lagi">\ menit lagi</string>
    <string name="location_icon">location icon</string>
    <string name="ashar">Ashar</string>
    <string name="isya">Isya</string>
    <string name="no_telp">No. Telp</string>
    <string name="nomor_handphone">Nomor handphone</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>

    <!-- API BASE URL -->
    <string name="url_api_main">http://192.168.43.149:8000/api/v1/</string>
    <string name="channelName">Waktu Shalat</string>
    <string name="channel_description">Segera Shalat</string>
</resources>
