<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintVertical_weight="1">

            <TextView

                android:id="@+id/daftar_akun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/daftar_akun"
                android:textColor="#27AE60"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/error_fiald_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/empty_field_message"
                android:textColor="#EE0024"
                android:textSize="14sp"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/form_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/nama"
                        android:textColor="#B0B5BD"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/input_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/nama_lengkap"
                        android:inputType="textPersonName"
                        android:textColor="#27AE60"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/form_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/email"
                        android:textColor="#B0B5BD"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="#27AE60"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/input_tanggal_lahir"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_semibold"
                            android:text="@string/tanggal_lahir"
                            android:textColor="#6F6F6F" />

                        <Button
                            android:id="@+id/date_picker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/date_picker_button"
                            android:fontFamily="@font/nunito_sans_semibold"
                            android:text="@string/date_pick"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="#C4C4C4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/input_jenis_kelamin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_semibold"
                            android:text="@string/jenis_kelamin"
                            android:textColor="#6F6F6F" />

                        <RadioGroup
                            android:id="@+id/radio_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/radio_pria"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito_sans_bold"
                                android:text="@string/pria"
                                android:textColor="@color/colorPrimary"
                                android:buttonTint="@color/colorPrimary" />

                            <RadioButton
                                android:id="@+id/radio_wanita"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito_sans_bold"
                                android:text="@string/wanita"
                                android:textColor="@color/colorPrimary"
                                android:buttonTint="@color/colorPrimary" />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/form_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/nomor_handphone"
                        android:textColor="#B0B5BD"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/no_telp"
                        android:inputType="phone"
                        android:textColor="#27AE60"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/form_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/password"
                        android:textColor="#B0B5BD"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#27AE60"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/form_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/confirm_password"
                        android:textColor="#B0B5BD"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/input_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="#27AE60"
                        android:backgroundTint="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/error_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/password_tidak_sama"
                        android:textColor="#EE0024"
                        android:textSize="14sp"
                        android:visibility="invisible" />

                    <CheckBox
                        android:id="@+id/terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/terms_and_condition"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_daftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tombolmasuk"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/daftar"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:onClick="register" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>