<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="30dp">
            <RelativeLayout
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_mini"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/salam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/salam"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:fontFamily="@font/nunito_sans"
                    android:textColor="#6F6F6F" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/form_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/email"
                    android:textColor="#B0B5BD"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textColor="#27AE60"
                    android:backgroundTint="@color/colorPrimary"
                    android:textCursorDrawable="@color/colorPrimary" />

                <TextView
                    android:id="@+id/error_email_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/requiredfield"
                    android:textColor="#EE0024"
                    android:textSize="14sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/form_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/password"
                    android:textColor="#B0B5BD"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#27AE60"
                    android:backgroundTint="@color/colorPrimary"
                    android:textCursorDrawable="@color/colorPrimary" />

                <TextView
                    android:id="@+id/error_pass_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/requiredfield"
                    android:textColor="#EE0024"
                    android:textSize="14sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ingat_saya"
                        android:textColor="@color/colorPrimary"
                        android:buttonTint="@color/colorPrimary"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lupa_password"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:textColor="@color/colorPrimary"
                        android:onClick="launchLupaPassword" />
                </LinearLayout>


                <TextView
                    android:id="@+id/not_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="username/password salah"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:textColor="#EE0024"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tombolmasuk"
                    android:text="@string/masuk"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textSize="14sp"
                    android:onClick="login" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/belum_punya_akun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/belum_punya_akun"
                    android:textColor="#B0B5BD" />

                <TextView
                    android:id="@+id/daftar_sekarang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_extrabold"
                    android:text="@string/register_now"
                    android:textColor="@color/colorPrimary"
                    android:onClick="launchRegister" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>