<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textSize="20sp"
            android:textColor="#546681"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="30dp">

                <TextView
                    android:id="@+id/form_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/nama"
                    android:textColor="#5A6B8D"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nama_lengkap"
                    android:inputType="textPersonName"
                    android:textColor="#27AE60" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="30dp">

                <TextView
                    android:id="@+id/form_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/email"
                    android:textColor="#5A6B8D"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#27AE60" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan_perubahan"
            android:background="@drawable/tombolmasuk"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/nunito_sans_bold"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:onClick="editProfil" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>