<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerComplete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <RelativeLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/exclude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/exclude" />

            <ImageView
                android:id="@+id/caligraphy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/exclude"
                android:layout_marginBottom="83dp"
                android:contentDescription="@string/caligraphy"
                android:src="@drawable/calligraphy_40586_960_720" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/alhamdulillah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/alhamdulillah"
                    android:textColor="@color/colorPrimary"
                    android:textSize="36sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:textSize="12sp"
                    android:text="@string/register_description"
                    android:textColor="#383636"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tombolmasuk"
                    android:text="@string/masuk"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textSize="16sp"
                    android:onClick="launchLogin"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>